--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,9 @@
 [build-system]
 requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
+[project]
+dependencies = [
+    'datasets',
+    'pandas',
+    'synthcity',
+]
