--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     'pandas',
     'py-synthpop',
     'pydantic<2',
+    'pyyaml>=6',
     'subprocessing',
     'synthcity',
     'syntheval',
